--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -10,11 +10,15 @@
     </ul>
     <span class="spacer"></span>
     <ul>
-        <mat-icon aria-hidden="false" aria-label="account_circle">account_circle</mat-icon>
-        <a routerLink="login">Login</a>
+        <mat-icon *ngIf="!auth.loginOn()" aria-hidden="false" aria-label="account_circle">account_circle</mat-icon>
+        <a *ngIf="!auth.loginOn()" routerLink="login">Login</a>
     </ul>
     <ul>
-        <mat-icon aria-hidden="false" aria-label="account_box">account_box</mat-icon>
-        <a routerLink="registro">Registro</a>
+        <mat-icon *ngIf="!auth.loginOn()" aria-hidden="false" aria-label="account_box">account_box</mat-icon>
+        <a *ngIf="!auth.loginOn()" routerLink="registro">Registro</a>
+    </ul>
+    <ul>
+        <mat-icon *ngIf="!auth.loginOn()" aria-hidden="false" aria-label="login">login</mat-icon>
+        <a *ngIf="auth.loginOn()" mat-button (click)="auth.cerrarSesion()">Cerrar Sesión</a>
     </ul>
 </mat-toolbar>
