--- a/frontend/src/app/tablero/crear/crear.component.html
+++ b/frontend/src/app/tablero/crear/crear.component.html
@@ -1,1 +1,37 @@
-<p>crear works!</p>
+<div class="form">
+    <mat-card class="card">
+      <mat-card-title>Crear actividad</mat-card-title>
+      <mat-card-content>
+        <div class="container">
+          <mat-form-field>
+            <input
+              [(ngModel)]="crearActividad.nombre"
+              matInput
+              placeholder="Nombre"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <input
+              [(ngModel)]="crearActividad.estado"
+              matInput
+              placeholder="Estado"
+            />
+          </mat-form-field>
+          <mat-form-field>
+            <input
+              [(ngModel)]="crearActividad.descripcion"
+              matInput
+              placeholder="Descripción"
+            />
+          </mat-form-field>
+          
+        </div>
+      </mat-card-content>
+      <mat-card-actions>
+        <button (click)="crear()" class="button col" mat-raised-button>
+          Registrar
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+  
